AMP-27268 fixing issue when pannel is collapsed

--- a/amp/TEMPLATE/ampTemplate/css_2/amp-rtl.css
+++ b/amp/TEMPLATE/ampTemplate/css_2/amp-rtl.css
@@ -752,3 +752,9 @@ th {
 .legend-admcluster {
     text-align: right;
 }
+
+#map-container.sidebar-icons-only #map-header {
+    left: 0px;
+    right: 80px;
+    width: auto;
+}
